<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/btnEnter"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="84dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manLogo"
            app:srcCompat="@drawable/round_linear_background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvStartButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79dp"
            android:layout_marginEnd="78dp"
            android:text="@string/enter"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnEnter"
            app:layout_constraintEnd_toEndOf="@+id/btnEnter"
            app:layout_constraintStart_toStartOf="@+id/btnEnter"
            app:layout_constraintTop_toTopOf="@+id/btnEnter" />

        <ImageView
            android:id="@+id/manLogo"
            android:layout_width="141dp"
            android:layout_height="144dp"

            android:layout_marginTop="92dp"
            android:clickable="false"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:srcCompat="@drawable/ic_human_run"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/bmi_calculator"
            android:textColor="#F611D7"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="Developed by Mehedi"
            android:textColor="#B0B4B1"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="@+id/btnEnter"
            app:layout_constraintHorizontal_bias="0.573"
            app:layout_constraintStart_toStartOf="@+id/btnEnter"
            app:layout_constraintTop_toBottomOf="@+id/btnEnter" />

        <TextView
            android:id="@+id/copyrightEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="mehedi.softdev@gmail.com"
            android:textColor="#7CAF6F"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/copyright"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="@+id/copyright"
            app:layout_constraintTop_toBottomOf="@+id/copyright"
            app:layout_constraintVertical_bias="0.01" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>